2011-03-23  Anders Carlsson  <andersca@apple.com>

Reviewed by Sam Weinig.

        Connection::SyncMessageState::processIncomingMessage should ignore whether the message is sync or not
        https://bugs.webkit.org/show_bug.cgi?id=56954

        This is so we'll eventually be able to send sync messages that aren't processed immediately if the
        destination is waiting for a reply to another synchronous message.

        * Platform/CoreIPC/Connection.cpp:
        (CoreIPC::Connection::SyncMessageState::processIncomingMessage):
        Only check for the DispatchMessageWhenWaitingForSyncReply flag.

        (CoreIPC::Connection::sendSyncMessage):
        Add both DispatchMessageWhenWaitingForSyncReply and SyncMessage to the message ID.

        * Platform/CoreIPC/Connection.h:
        (CoreIPC::Connection::sendSync):
        (CoreIPC::Connection::deprecatedSendSync):
        No need to add SyncMessage here anymore.


Canonical link: https://commits.webkit.org/71622@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81798 268f45cc-cd09-0410-ab3c-d52691b4dbfc